--- a/SignalR.Dto/SignalR.Dto.csproj
+++ b/SignalR.Dto/SignalR.Dto.csproj
@@ -11,6 +11,7 @@
     <Folder Include="BookingDto\" />
     <Folder Include="DiscountDto\" />
     <Folder Include="FeatureDto\" />
+    <Folder Include="OrderDto\" />
     <Folder Include="SocialMediaDto\" />
   </ItemGroup>
 
